--- a/Zavrsni rad/README
+++ b/Zavrsni rad/README
@@ -1,21 +1,7 @@
-sais-lite-LCP-0.0.1
-----------------------
+Genome alignment is one of the major problems in bioinformatics that still have not been effectively resolved. 
+Although exact algorithms which would give optimal solution are known they are not used becouse of their long running time.
 
-This is an ad-hoc-implementation of the code described in
 
-"Inducing the LCP-Array" (http://arxiv.org/abs/1101.3448)
-
-by Johannes Fischer.
-
-It is based on Yuta Mori's sais-lite 2.4.1 (http://sites.google.com/site/yuta256),
-which, in turn, is an implementation of the  following paper:
-
-Ge Nong, Sen Zhang and Wai Hong Chan
-Two Efficient Algorithms for Linear Suffix Array Construction
-DCC 2009.
-
-To compile, type 'make'. Then run ./suftest <testfile>.
-
-----
-
-Johannes Fischer (johannes.fischer@kit.edu)
+In this thesis is described tool for genome alignment realized like multithreaded application written in C++.
+Tool is based on locating identical interval regions in given sequences by using suffix array, and after that 
+by using Smith-Waterman algorithm on regions in which MUMs were not found.
